--- a/ex022/fundo001.html
+++ b/ex022/fundo001.html
@@ -12,13 +12,13 @@
         }
         
         div.quadrado{
+            transition-duration: 0.5s;
             display: inline-block;
             height: 300px;
             width: 300px;
             border-radius: 10px;
             border: 2px solid black;
         }
-
         div#q1{
             background-color: lightskyblue;
 
@@ -26,11 +26,12 @@
 
         div#q2{
             background-image: linear-gradient(to bottom, yellow, red);
+
         }
 
         div#q3{
             background-image: url('imagens/pattern003.png');
-        }
+        } 
          
     </style>
 </head>
