--- a/ex022/fundo001.html
+++ b/ex022/fundo001.html
@@ -19,11 +19,14 @@
             border-radius: 10px;
             border: 2px solid black;
         }
+        div#q1:hover{
+            background-color: black;
+        }
+
         div#q1{
             background-color: lightskyblue;
 
         }
-
         div#q2{
             background-image: linear-gradient(to bottom, yellow, red);
 
