--- a/menu-seleçao/index.html
+++ b/menu-seleçao/index.html
@@ -17,8 +17,8 @@
 <nav>
         <a href="https://www.youtube.com" target="_blank">
             <div class="quadrado" >
-                <p id='p1'>Cheatsheets</p>
-                <p id='p2'>Learn JavaScript</p>
+                <p id='p1'>Clique aqui para ir para o youtube</p>
+                <p id='p2'></p>
             </div>
         </a>
     
