--- a/menu-seleçao/index.html
+++ b/menu-seleçao/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
 <header>
     <h1>
       Redes Sociais
@@ -30,7 +30,6 @@
             </div>
         </a>
     </nav>
-
-
+    </main>
 </body>
 </html>
