--- a/ex023/a.html
+++ b/ex023/a.html
@@ -30,9 +30,11 @@
             League of legends
         </h1>
 
-        <p>
-            League of Legends é um jogo eletrônico online gratuito, do gênero batalha multijogador, desenvolvido e publicado pela empresa americana Riot Games em 2009, para os sistemas operacionais Microsoft Windows e MacOS, inspirado nos jogos Defense of the Ancients e Warcraft III
-        </p>
+        <a href="#">
+            <p>
+                League of Legends é um jogo eletrônico online gratuito, do gênero batalha multijogador, desenvolvido e publicado pela empresa americana Riot Games em 2009, para os sistemas operacionais Microsoft Windows e MacOS, inspirado nos jogos Defense of the Ancients e Warcraft III
+            </p>
+        </a>
     </header>
 
 </body>
