--- a/ex023/tabela002/index.html
+++ b/ex023/tabela002/index.html
@@ -12,6 +12,13 @@
         table{
             border-collapse: collapse;
             width: 500px;
+            position: relative;
+        }
+
+        thead > tr > th{
+            position: sticky;
+            top: 0;
+            background-color: gray;
         }
         td, th{
             border: 1px solid black;
@@ -32,6 +39,13 @@
             text-align: center;
             width: 50px;
         }
+        table tr:nth-child(2n){
+
+            background-color: lightgray;
+
+        }
+
+        
     </style>
 </head>
 <body>
@@ -102,10 +116,25 @@
         </tbody>
         <tfoot>
             <tr>
-                <td>Total de Habitantes</td>
+                <td id="aa">Total de Habitantes</td>
                 <td>0000</td>
             </tr>
         </tfoot>
     </table>
+    <h1>Cabeça da Tebela segue para baixo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse provident sit tempore deserunt. Similique ea quisquam possimus fugit soluta in amet ad harum reiciendis unde eligendi, odio perferendis dignissimos officia!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse provident sit tempore deserunt. Similique ea quisquam possimus fugit soluta in amet ad harum reiciendis unde eligendi, odio perferendis dignissimos officia!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse provident sit tempore deserunt. Similique ea quisquam possimus fugit soluta in amet ad harum reiciendis unde eligendi, odio perferendis dignissimos officia!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse provident sit tempore deserunt. Similique ea quisquam possimus fugit soluta in amet ad harum reiciendis unde eligendi, odio perferendis dignissimos officia!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse provident sit tempore deserunt. Similique ea quisquam possimus fugit soluta in amet ad harum reiciendis unde eligendi, odio perferendis dignissimos officia!</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse provident sit tempore deserunt. Similique ea quisquam possimus fugit soluta in amet ad harum reiciendis unde eligendi, odio perferendis dignissimos officia!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse provident sit tempore deserunt. Similique ea quisquam possimus fugit soluta in amet ad harum reiciendis unde eligendi, odio perferendis dignissimos officia!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse provident sit tempore deserunt. Similique ea quisquam possimus fugit soluta in amet ad harum reiciendis unde eligendi, odio perferendis dignissimos officia!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse provident sit tempore deserunt. Similique ea quisquam possimus fugit soluta in amet ad harum reiciendis unde eligendi, odio perferendis dignissimos officia!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse provident sit tempore deserunt. Similique ea quisquam possimus fugit soluta in amet ad harum reiciendis unde eligendi, odio perferendis dignissimos officia!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse provident sit tempore deserunt. Similique ea quisquam possimus fugit soluta in amet ad harum reiciendis unde eligendi, odio perferendis dignissimos officia!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse provident sit tempore deserunt. Similique ea quisquam possimus fugit soluta in amet ad harum reiciendis unde eligendi, odio perferendis dignissimos officia!</p>
+
 </body>
 </html>
